# Lab2b_esp_Arnav

./: LICENSE  README.md
Lab_2B_Part5/: Screenshots.md
Lab_2B_Parts/Part_1/: README.md  ws2812.c
Lab_2B_Parts/Part_10/: CMakeLists.txt  ReadMe.md  re_build.sh  ws2812.c  ws2812.pio
Lab_2B_Parts/Part_2/: README.md  ws2812.c
Lab_2B_Parts/Part_3/: README.md
Lab_2B_Parts/Part_3/sequencer_device_keys/: CMakeLists.txt  ws2812.c  ws2812_2.c
Lab_2B_Parts/Part_3/sequencer_host_keys/: README.md  rp2040_serial.py  ws2812.c
Lab_2B_Parts/Part_3/sequencer_host_keys_macros/: ws2812.c
Lab_2B_Parts/Part_4/: ReadMe.md  rp2040_slow_motion.py  ws2812.c
Lab_2B_Parts/Part_5/: Screenshots.md
Lab_2B_Parts/Part_6/: CMakeLists.txt  ReadMe.md  logic_analyser.c
Lab_2B_Parts/Part_7/: CMakeLists.txt  Lab2b_esp_Arnav - Shortcut.lnk  ReadMe.md  ws2812.c  ws2812_parallel.c
Lab_2B_Parts/Part_8/: ReadMe.md  i2c_bus_scan.c
Lab_2B_Parts/Part_9/: ReadMe.md  i2c_bus_scan.c
